--- a/src/templates/document-approval.html
+++ b/src/templates/document-approval.html
@@ -1,12 +1,12 @@
 ---
-title: "Invoice Approval Notification"
-bodyClass: "bg-blue-50"
+title: "Document Approval Notification"
+bodyClass: "bg-amber-50"
 ---
 
 <x-layout>
     <table class="w-full shadow-xl rounded">
         <tr>
-            <td class="p-6 bg-blue-900 text-white rounded-t">
+            <td class="p-6 bg-amber-900 text-white rounded-t">
                 <h2 class="mt-2 mb-3 text-2xl text-center">
                     {{page.title}}
                 </h2>
@@ -15,11 +15,11 @@ bodyClass: "bg-blue-50"
         <tr>
             <td class="p-6 bg-white rounded-b text-center">
                 <p class="mb-16 text-base text-slate-500">
-                    username approved the invoice
+                    username approved the document.
                 </p>
                 <p>
-                    <a href="http://invoice-approval.company.com/invoice_id">
-                        View Invoice
+                    <a href="http://document-approval.company.com/document_id">
+                        View Document
                     </a>
                 </p>
             </td>
