--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Approval</title>
+    <title>{{ page.title }}</title>
+    <style>{{ page.css }}</style>
 </head>
-<body>
+<body class="{{ page.bodyClass }}">
     <content />
 </body>
 </html>
