--- a/src/templates/invoice-approval.html
+++ b/src/templates/invoice-approval.html
@@ -4,25 +4,12 @@ bodyClass: "bg-blue-50"
 ---
 
 <x-layout>
-    <table class="w-full shadow-xl rounded">
-        <tr>
-            <td class="p-6 bg-blue-900 text-white rounded-t">
-                <h2 class="mt-2 mb-3 text-2xl text-center">
-                    {{page.title}}
-                </h2>
-            </td>
-        </tr>
-        <tr>
-            <td class="p-6 bg-white rounded-b text-center">
-                <p class="mb-16 text-base text-slate-500">
-                    username approved the invoice
-                </p>
-                <p>
-                    <a href="http://invoice-approval.company.com/invoice_id">
-                        View Invoice
-                    </a>
-                </p>
-            </td>
-        </tr>
-    </table>
+    <x-notification bgColor="bg-blue-900">
+        <fill:message>username approved the invoice.</fill:message>
+        <p>
+            <a href="http://invoice-approval.company.com/invoice_id">
+                View Invoice
+            </a>
+        </p>
+    </x-notification>
 </x-layout>
