--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
+    <stack name="head" />
     <style>{{ page.css }}</style>
 </head>
 <body class="{{ page.bodyClass }}">
